Changed jumping logic Scale animation on first chat opening Draft: save entities on saving Fix blinking media on chat opening Changed peer name colors to macOS version

--- a/src/scss/partials/_input.scss
+++ b/src/scss/partials/_input.scss
@@ -140,6 +140,7 @@
       padding: 0 6px;
       opacity: 1;
       left: .75rem;
+      font-weight: 500;
     }
   }
 }
