--- a/src/scss/partials/_leftSidebar.scss
+++ b/src/scss/partials/_leftSidebar.scss
@@ -106,6 +106,10 @@
     }
   }
 
+  .folders-tabs-scrollable li:first-child {
+    margin-left: .6875rem;
+  }
+
   .item-main {
     .input-search {
       /* &-input {
